// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Test addClassName Test 1`] = `
<DocumentFragment>
  <div
    class="css-16vsmse-Container"
  >
    children
  </div>
</DocumentFragment>
`;

exports[`Container Test addClassName Test 2`] = `
<DocumentFragment>
  <div
    class="css-1bh0wdd-Container"
  >
    children
  </div>
</DocumentFragment>
`;

exports[`Container Test isSingle-Props Test 1`] = `
<DocumentFragment>
  <div
    class="css-16vsmse-Container"
  >
    children
  </div>
</DocumentFragment>
`;

exports[`Container Test isSingle-Props Test 2`] = `
<DocumentFragment>
  <div
    class="css-16vsmse-Container"
  >
    children
  </div>
</DocumentFragment>
`;
